Finished adding all controllers

--- a/BlogLab.Web/appsettings.json
+++ b/BlogLab.Web/appsettings.json
@@ -11,7 +11,7 @@
     "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=BlogDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
   "Jwt": {
-    "Key": "something",
-    "Issuer":  "http://localhost:5000"
+    "Key": "&k*vQvHF!Gjd+SZ2j#+wgTLBLgVkPykuwQb_N86GcL7*Gw8ngeM^G+YF8eqGtZKdfLPpU$rR^TAwLpUE6C_ncQdcvuzjjqy3B6!KRd@ctHM^p#L$2K3Ehj*ZNXT3v7r9u=FKnu_BK87YRjLBAf8!vYv!bAjVe2kT9Tq=fM2Qd9DAKnxf2KLJ!vP5Tm6v4m+Uj%P7y8pTkGdq=HXLr2LamKyhy8haku!v*g*F3DUT2y%*hQX8HBKtywENr9FWU93P",
+    "Issuer": "http://localhost:5000"
   }
 }
